# excel-splitter

./: .gitignore  GitHub Actions Tauri 编译.yml  GitHub Actions 使用指南.md  GitHub上传指南.md  GitHub上传步骤.md  Linux一键编译脚本.sh  Linux交叉编译Windows指南.md  Linux编译命令速查.md  README.md  README_Tauri.md  Rust版本说明.md  Tauri编译指南.md  build.bat  tauri.conf.json  云端编译方案对比.md  使用示例.md  修复说明.md  功能对比.md  快速编译指南.md  编译指南.md  项目结构说明.md
.github/workflows/: build.yml
src/: format.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
ui/: index.html
